--- a/_data/types.yaml
+++ b/_data/types.yaml
@@ -96,6 +96,12 @@ twitter:
   tooltip: Twitter
   link: https://twitter.com/$VALUE
 
+x:
+  icon: fa-brands fa-x
+  text: X
+  tooltip: X
+  link: https://x.com/$VALUE
+
 bluesky:
   icon: fa-brands fa-bluesky
   text: Bluesky
