--- a/_config.yaml
+++ b/_config.yaml
@@ -18,11 +18,11 @@ baseurl: ""
 
 # site social media and other links
 links:
-  email: e.giunchiglia@ic.ac.uk
+#  email: e.giunchiglia@ic.ac.uk
 #  orcid: 0000-0001-8713-9213
 #  google-scholar: ETJoidYAAAAJ
   github: duck-AI-lab
-  twitter: duck-AI-lab
+  x: duck-AI-lab
 #  youtube: duck-AI-lab
 
 ### jekyll settings
