--- a/.github/workflows/first-time-setup.yaml
+++ b/.github/workflows/first-time-setup.yaml
@@ -113,7 +113,7 @@ jobs:
             const file = "index.md";
             let contents = readFileSync(file).toString();
             const find = /\# Lab Website Template[\s\S]+({% include section\.html)/;
-            const replace = `# ${{ env.DESCRIPTION }}\n\n$1`;
+            const replace = `# ${{ env.USER }}'s Website\n\n${{ env.DESCRIPTION }}\n\n$1`;
             contents = contents.replace(find, replace);
             writeFileSync(file, contents);
 
