--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,9 +1,10 @@
 - title: "PiShield"
   subtitle: "A PyTorch Package for Learning with Requirements"
   group: featured
+  style: contain
   image: images/projects/pishield_logo.png
   link: https://sites.google.com/view/pishield/home
-  description: PiShield is the first package ever allowing for the integration of the requirements into the neural networks' topology, guaranteeing compliance with these requirements, regardless of input. Additionally, it allows for integrating requirements both at inference and/or training time, depending on the practitioners' needs.
+  description: PiShield is the first package ever allowing for the integration of the requirements into the neural networks' topology, guaranteeing compliance with these requirements, regardless of input.
   repo: mihaela-stoian/PiShield
   tags:
     - package
@@ -13,7 +14,7 @@
   group: featured
   image: images/projects/road_demo.gif
   link: https://github.com/EGiunchiglia/ROAD-R
-  description: ROAD-R is an extension of the ROAD dataset with a set of 243 manually annotated requirements over the 41 labels grouped into agents, actions and locations. The requirements are written in propositional logic and express background knowledge applicable in autonomous driving scenarios.
+  description: ROAD-R is the first autonomous driving dataset annotated with logical requirements. Extending the ROAD dataset, it contains a set of 243 requirements over 41 labels grouped into agents, actions and locations.
   repo: EGiunchiglia/ROAD-R
   tags:
     - dataset
