--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -1,265 +1,228 @@
 # DO NOT EDIT, GENERATED AUTOMATICALLY
 
-- id: doi:10.1101/2025.06.19.660613
-  title: Scalable data harmonization for single-cell image-based profiling with CytoTable
+- id: doi:10.1007/s10994-023-06322-z
+  title: 'ROAD-R: the autonomous driving dataset with logical requirements'
   authors:
-  - Dave Bunten
-  - Jenna Tomkinson
-  - Erik Serrano
-  - Michael J. Lippincott
-  - Kenneth I. Brewer
-  - Vince Rubinetti
-  - Faisal Alquaddoomi
-  - Gregory P. Way
-  publisher: Cold Spring Harbor Laboratory
-  date: '2025-06-25'
-  link: https://doi.org/g9rfr3
-  orcid: 0000-0002-4655-3773
+  - Eleonora Giunchiglia
+  - "Mihaela C\u0103t\u0103lina Stoian"
+  - Salman Khan
+  - Fabio Cuzzolin
+  - Thomas Lukasiewicz
+  publisher: Machine Learning
+  date: '2023-05-01'
+  link: https://doi.org/gs28c9
+  orcid: 0000-0001-9313-753X
   plugin: orcid.py
   file: orcid.yaml
-- id: doi:10.1093/nar/gkad1082
-  title: "The Monarch Initiative in 2024: an analytic platform integrating phenotypes,\
-    \ genes\_and diseases across species"
+- id: doi:10.1109/csr57506.2023.10225000
+  title: 'To TTP or not to TTP?: Exploiting TTPs to Improve ML-based Malware Detection'
   authors:
-  - Tim E Putman
-  - Kevin Schaper
-  - Nicolas Matentzoglu
-  - "Vincent\_P Rubinetti"
-  - "Faisal\_S Alquaddoomi"
-  - Corey Cox
-  - J Harry Caufield
-  - Glass Elsarboukh
-  - Sarah Gehrke
-  - Harshad Hegde
-  - "Justin\_T Reese"
-  - Ian Braun
-  - "Richard\_M Bruskiewich"
-  - Luca Cappelletti
-  - Seth Carbon
-  - "Anita\_R Caron"
-  - "Lauren\_E Chan"
-  - "Christopher\_G Chute"
-  - "Katherina\_G Cortes"
-  - "Vin\xEDcius De\_Souza"
-  - Tommaso Fontana
-  - "Nomi\_L Harris"
-  - "Emily\_L Hartley"
-  - Eric Hurwitz
-  - "Julius\_O B Jacobsen"
-  - Madan Krishnamurthy
-  - "Bryan\_J Laraway"
-  - "James\_A McLaughlin"
-  - "Julie\_A McMurry"
-  - "Sierra\_A T Moxon"
-  - "Kathleen\_R Mullen"
-  - "Shawn\_T O\u2019Neil"
-  - "Kent\_A Shefchek"
-  - Ray Stefancsik
-  - Sabrina Toro
-  - "Nicole\_A Vasilevsky"
-  - "Ramona\_L Walls"
-  - "Patricia\_L Whetzel"
-  - David Osumi-Sutherland
-  - Damian Smedley
-  - "Peter\_N Robinson"
-  - "Christopher\_J Mungall"
-  - "Melissa\_A Haendel"
-  - "Monica\_C Munoz-Torres"
-  publisher: Nucleic Acids Research
-  date: '2023-11-24'
-  link: https://doi.org/gs6kmr
-  orcid: 0000-0002-4655-3773
+  - Yashovardhan Sharma
+  - Eleonora Giunchiglia
+  - Simon Birnbach
+  - Ivan Martinovic
+  publisher: 2023 IEEE International Conference on Cyber Security and Resilience (CSR)
+  date: '2023-07-31'
+  link: https://doi.org/hbg46s
+  orcid: 0000-0001-9313-753X
   plugin: orcid.py
   file: orcid.yaml
-- id: doi:10.1101/2023.10.11.560955
-  title: Integration of 168,000 samples reveals global patterns of the human gut microbiome
-  authors:
-  - Richard J. Abdill
-  - Samantha P. Graham
-  - Vincent Rubinetti
-  - Frank W. Albert
-  - Casey S. Greene
-  - Sean Davis
-  - Ran Blekhman
-  publisher: Cold Spring Harbor Laboratory
-  date: '2023-10-11'
-  link: https://doi.org/gsvf5z
-  orcid: 0000-0002-4655-3773
+- title: Exploiting T-norms for Deep Learning in Autonomous Driving
+  publisher: "Proceedings of the 17th International Workshop on Neural-Symbolic\n\
+    \                  Learning and Reasoning, La Certosa di Pontignano, Siena, Italy,\
+    \ July\n                  3-5, 2023"
+  date: '2023-09-12'
+  link: https://ceur-ws.org/Vol-3432/paper31.pdf
+  orcid: 0000-0001-9313-753X
   plugin: orcid.py
   file: orcid.yaml
-- id: doi:10.1093/nar/gkad289
-  title: 'MyGeneset.info: an interactive and programmatic platform for community-curated
-    and user-created collections of genes'
-  authors:
-  - Ricardo Avila
-  - Vincent Rubinetti
-  - Xinghua Zhou
-  - Dongbo Hu
-  - Zhongchao Qian
-  - Marco Alvarado Cano
-  - Everaldo Rodolpho
-  - Ginger Tsueng
-  - Casey Greene
-  - Chunlei Wu
-  publisher: Nucleic Acids Research
-  date: '2023-04-18'
-  link: https://doi.org/gr5hb5
-  orcid: 0000-0002-4655-3773
+- title: 'Machine Learning with Requirements: a Manifesto'
+  publisher: arXiv preprint arXiv:2304.03674
+  date: '2023-09-14'
+  orcid: 0000-0001-9313-753X
   plugin: orcid.py
   file: orcid.yaml
-- id: doi:10.1101/2023.01.05.522941
-  title: Hetnet connectivity search provides rapid insights into how two biomedical
-    entities are related
+- id: doi:10.24963/ijcai.2022/767
+  title: Deep Learning with Logical Constraints
   authors:
-  - Daniel S. Himmelstein
-  - Michael Zietz
-  - Vincent Rubinetti
-  - Kyle Kloster
-  - Benjamin J. Heil
-  - Faisal Alquaddoomi
-  - Dongbo Hu
-  - David N. Nicholson
-  - Yun Hao
-  - Blair D. Sullivan
-  - Michael W. Nagle
-  - Casey S. Greene
-  publisher: Cold Spring Harbor Laboratory
-  date: '2023-01-07'
-  link: https://doi.org/grmcb9
-  orcid: 0000-0002-4655-3773
+  - Eleonora Giunchiglia
+  - Mihaela Catalina Stoian
+  - Thomas Lukasiewicz
+  publisher: Proceedings of the Thirty-First International Joint Conference on Artificial
+    Intelligence
+  date: '2022-07-01'
+  link: https://doi.org/gr4v7b
+  orcid: 0000-0001-9313-753X
   plugin: orcid.py
   file: orcid.yaml
-- id: doi:10.1093/gigascience/giad047
-  title: Hetnet connectivity search provides rapid insights into how biomedical entities
-    are related
+- id: doi:10.1613/jair.1.12850
+  title: Multi-Label Classification Neural Networks with Hard Logical Constraints
   authors:
-  - Daniel S Himmelstein
-  - Michael Zietz
-  - Vincent Rubinetti
-  - Kyle Kloster
-  - Benjamin J Heil
-  - Faisal Alquaddoomi
-  - Dongbo Hu
-  - David N Nicholson
-  - Yun Hao
-  - Blair D Sullivan
-  - Michael W Nagle
-  - Casey S Greene
-  publisher: GigaScience
-  date: '2022-12-28'
-  link: https://doi.org/gsd85n
-  orcid: 0000-0002-4655-3773
+  - Eleonora Giunchiglia
+  - Thomas Lukasiewicz
+  publisher: Journal of Artificial Intelligence Research
+  date: '2021-11-09'
+  link: https://doi.org/hbg46t
+  orcid: 0000-0001-9313-753X
   plugin: orcid.py
   file: orcid.yaml
-- id: doi:10.1101/2022.02.18.461833
-  title: 'MolEvolvR: A web-app for characterizing proteins using molecular evolution
-    and phylogeny'
+- id: doi:10.1145/3459637.3482218
+  title: Lightweight Visual Question Answering using Scene Graphs
   authors:
-  - Faisal S Alquaddoomi
-  - Joseph T Burke
-  - Lo Sosinski
-  - David A Mayer
-  - Evan P Brenner
-  - Samuel Z Chen
-  - Jacob D Krol
-  - Ethan P Wolfe
-  - Vincent P Rubinetti
-  - Shaddai Amolitos
-  - Kellen M Reason
-  - John B Johnston
-  - Janani Ravi
-  publisher: Cold Spring Harbor Laboratory
-  date: '2022-02-22'
-  link: https://doi.org/gstx7j
-  orcid: 0000-0002-4655-3773
+  - Sai Vidyaranya Nuthalapati
+  - Ramraj Chandradevan
+  - Eleonora Giunchiglia
+  - Bowen Li
+  - Maxime Kayser
+  - Thomas Lukasiewicz
+  - Carl Yang
+  publisher: Proceedings of the 30th ACM International Conference on Information &amp;
+    Knowledge Management
+  date: '2021-10-26'
+  link: https://doi.org/hbg46v
+  orcid: 0000-0001-9313-753X
   plugin: orcid.py
   file: orcid.yaml
-- id: doi:10.1186/s13059-020-02021-3
-  title: Compressing gene expression data using multiple latent space dimensionalities
-    learns complementary biological representations
+- id: doi:10.1109/icmla51294.2020.00014
+  title: Knowledge Graph Extraction from Videos
   authors:
-  - Gregory P. Way
-  - Michael Zietz
-  - Vincent Rubinetti
-  - Daniel S. Himmelstein
-  - Casey S. Greene
-  publisher: Genome Biology
-  date: '2020-05-11'
-  link: https://doi.org/gg2mjh
-  orcid: 0000-0002-4655-3773
+  - Louis Mahon
+  - Eleonora Giunchiglia
+  - Bowen Li
+  - Thomas Lukasiewicz
+  publisher: 2020 19th IEEE International Conference on Machine Learning and Applications
+    (ICMLA)
+  date: '2020-12-01'
+  link: https://doi.org/hbg46w
+  orcid: 0000-0001-9313-753X
   plugin: orcid.py
   file: orcid.yaml
-- id: doi:10.1371/journal.pcbi.1007128
-  title: Open collaborative writing with Manubot
+- title: Coherent Hierarchical Multi-Label Classification Networks
+  publisher: Advances in Neural Information Processing Systems
+  date: '2023-09-12'
+  link: https://proceedings.neurips.cc/paper_files/paper/2020/file/6dd4e10e3296fa63738371ec0d5df818-Paper.pdf
+  orcid: 0000-0001-9313-753X
+  plugin: orcid.py
+  file: orcid.yaml
+- title: 'The struggles of feature-based explanations: Shapley values vs. minimal
+    sufficient subsets'
+  publisher: AAAI Explainable Agency in Artificial Intelligence Workshop 2021
+  date: '2023-09-14'
+  orcid: 0000-0001-9313-753X
+  plugin: orcid.py
+  file: orcid.yaml
+- id: doi:10.1109/smc.2019.8914358
+  title: 'Conditional Behavior Trees: Definition, Executability, and Applications'
   authors:
-  - Daniel S. Himmelstein
-  - Vincent Rubinetti
-  - David R. Slochower
-  - Dongbo Hu
-  - Venkat S. Malladi
-  - Casey S. Greene
-  - Anthony Gitter
-  publisher: PLOS Computational Biology
-  date: '2020-12-04'
-  link: https://doi.org/c7np
-  orcid: 0000-0002-4655-3773
-  plugin: sources.py
-  file: sources.yaml
-  type: paper
+  - Eleonora Giunchiglia
+  - Michele Colledanchise
+  - Lorenzo Natale
+  - Armando Tacchella
+  publisher: 2019 IEEE International Conference on Systems, Man and Cybernetics (SMC)
+  date: '2019-10-01'
+  link: https://doi.org/g5j9zr
+  orcid: 0000-0001-9313-753X
+  plugin: orcid.py
+  file: orcid.yaml
+- id: doi:10.1145/3310013.3322175
+  title: Engineering Multi-Agent Systems
+  authors:
+  - Viviana Mascardi
+  - Danny Weyns
+  - Alessandro Ricci
+  - Clara Benac Earle
+  - Arthur Casals
+  - Moharram Challenger
+  - Amit Chopra
+  - Andrei Ciortea
+  - Louise A. Dennis
+  - "\xC1lvaro Fern\xE1ndez D\xEDaz"
+  - Amal El Fallah-Seghrouchni
+  - Angelo Ferrando
+  - "Lars-\xC5ke Fredlund"
+  - Eleonora Giunchiglia
+  - Zahia Guessoum
+  - "Akin G\xFCnay"
+  - Koen Hindriks
+  - Carlos A. Iglesias
+  - Brian Logan
+  - Timotheus Kampik
+  - Geylani Kardas
+  - Vincent J. Koeman
+  - John Bruntse Larsen
+  - Simon Mayer
+  - "Tasio M\xE9ndez"
+  - Juan Carlos Nieves
+  - Valeria Seidita
+  - Baris Tekin Teze
+  - "L\xE1szl\xF3 Z. Varga"
+  - Michael Winikoff
+  publisher: ACM SIGSOFT Software Engineering Notes
+  date: '2019-03-25'
+  link: https://doi.org/g9xbbk
+  orcid: 0000-0001-9313-753X
+  plugin: orcid.py
+  file: orcid.yaml
+- title: Can I trust the explainer? Verifying post-hoc explanatory methods.
+  publisher: NeurIPS 2019 Workshop on Safety and Robustness in Decision Making, Vancouver,
+    Canada
+  date: '2023-09-14'
+  orcid: 0000-0001-9313-753X
+  plugin: orcid.py
+  file: orcid.yaml
+- title: Computing the Initial Requirements in Conditioned Behavior Trees
+  publisher: 6th International Workshop on Engineering Multi-Agent Systems (EMAS 2018)
+  date: '2023-09-14'
+  orcid: 0000-0001-9313-753X
+  plugin: orcid.py
+  file: orcid.yaml
+- id: doi:10.1007/978-3-030-01424-7_3
+  title: 'RNN-SURV: A Deep Recurrent Model for Survival Analysis'
+  authors:
+  - Eleonora Giunchiglia
+  - Anton Nemchenko
+  - Mihaela van der Schaar
+  publisher: Lecture Notes in Computer Science
+  date: '2018-01-01'
+  link: https://doi.org/gnnsds
+  orcid: 0000-0001-9313-753X
+  plugin: orcid.py
+  file: orcid.yaml
+- id: doi:10.48550/arXiv.2402.04823
+  title: How Realistic Is Your Synthetic Data? Constraining Deep Generative Models
+    for Tabular Data
+  authors:
+  - "Mihaela C\u0103t\u0103lina Stoian"
+  - Salijona Dyrmishi
+  - Maxime Cordy
+  - Thomas Lukasiewicz
+  - Eleonora Giunchiglia
+  publisher: arXiv
+  date: '2024-01-01'
+  link: https://doi.org/hbg46z
+  image: images/research/DRL.png
   description: Lorem ipsum _dolor_ **sit amet**, consectetur adipiscing elit, sed
     do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  image: https://journals.plos.org/ploscompbiol/article/figure/image?size=inline&id=info:doi/10.1371/journal.pcbi.1007128.g001&rev=2
-  buttons:
-  - type: manubot
-    link: https://greenelab.github.io/meta-review/
-  - type: source
-    text: Manuscript Source
-    link: https://github.com/greenelab/meta-review
-  - type: website
-    link: http://manubot.org/
-  tags:
-  - open science
-  - collaboration
-  repo: greenelab/meta-review
-- id: doi:10.1101/573782
-  title: Sequential compression of gene expression across dimensionalities and methods
-    reveals no single best method or dimensionality
-  authors:
-  - Gregory P. Way
-  - Michael Zietz
-  - Vincent Rubinetti
-  - Daniel S. Himmelstein
-  - Casey S. Greene
-  publisher: Cold Spring Harbor Laboratory
-  date: '2019-03-11'
-  link: https://doi.org/gfxjxf
-  orcid: 0000-0002-4655-3773
-  plugin: orcid.py
-  file: orcid.yaml
-- id: doi:10.1016/j.csbj.2020.05.017
-  title: Constructing knowledge graphs and their biomedical applications
-  authors:
-  - David N. Nicholson
-  - Casey S. Greene
-  publisher: Computational and Structural Biotechnology Journal
-  date: '2020-01-01'
-  link: https://doi.org/gg7m48
-  image: https://ars.els-cdn.com/content/image/1-s2.0-S2001037020302804-gr1.jpg
+  repo: mihaela-stoian/ConstrainedDGM
   plugin: sources.py
   file: sources.yaml
-- id: doi:10.7554/eLife.32822
-  title: Sci-Hub provides access to nearly all scholarly literature
+- id: doi:10.48550/arXiv.2502.18237
+  title: 'Beyond the convexity assumption: Realistic tabular data generation under
+    quantifier-free real linear constraints'
   authors:
-  - Daniel S Himmelstein
-  - Ariel Rodriguez Romero
-  - Jacob G Levernier
-  - Thomas Anthony Munro
-  - Stephen Reid McLaughlin
-  - Bastian Greshake Tzovaras
-  - Casey S Greene
-  publisher: eLife
-  date: '2018-03-01'
-  link: https://doi.org/ckcj
-  image: https://iiif.elifesciences.org/lax:32822%2Felife-32822-fig8-v3.tif/full/863,/0/default.webp
+  - "Mihaela C\u0103t\u0103lina Stoian"
+  - Eleonora Giunchiglia
+  publisher: arXiv
+  date: '2020-12-04'
+  link: https://doi.org/hbg46k
+  type: paper
+  image: images/research/DRL.png
+  description: Lorem ipsum _dolor_ **sit amet**, consectetur adipiscing elit, sed
+    do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  buttons:
+  - type: source
+    text: Code
+    link: https://github.com/mihaela-stoian/DRL_DGM
+  repo: mihaela-stoian/DRL_DGM
   plugin: sources.py
   file: sources.yaml
