--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,12 +1,9 @@
-- date: 2025
+- date: 08-2025
   title: AI for Math Fund
   subtitle: "Constraining LLMs for Theorem Proving: A Neurosymbolic Approach to Guaranteed Autoformalization"
-  description: Dr. Giunchiglia has been awarded an AI for Math grant. Read more (here)[https://www.renaissancephilanthropy.org/constraining-llms-for-theorem-proving-a-neurosymbolic-approach-to-guaranteed-autoformalization]
+  description: "Dr. Giunchiglia has been awarded an AI for Math grant. Read more [here](https://www.renaissancephilanthropy.org/constraining-llms-for-theorem-proving-a-neurosymbolic-approach-to-guaranteed-autoformalization)"
 
-
-- date: 2025
+- date: 08-2025
   title: AI for Math Fund
   subtitle: "Constraining LLMs for Theorem Proving: A Neurosymbolic Approach to Guaranteed Autoformalization"
-  description: Dr. Giunchiglia has been awarded an AI for Math grant. Read more (here)[https://www.renaissancephilanthropy.org/constraining-llms-for-theorem-proving-a-neurosymbolic-approach-to-guaranteed-autoformalization]
-
-
+  description: "Dr. Giunchiglia has been awarded an AI for Math grant. Read more [here](https://www.renaissancephilanthropy.org/constraining-llms-for-theorem-proving-a-neurosymbolic-approach-to-guaranteed-autoformalization)"
