updated text color

--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 # site properties and page defaults
-title: DUCK LAB
+title:
 subtitle: 
 description:  description of  lab
 #header: images/background.jpg
